--- a/server/MVCTest/src/main/webapp/WEB-INF/web.xml
+++ b/server/MVCTest/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
 		<welcome-file>default.jsp</welcome-file>
 		<welcome-file>default.htm</welcome-file>
 	</welcome-file-list>
+	
 	<servlet>
 		<servlet-name>hello</servlet-name>
 		<servlet-class>com.test.java.Hello</servlet-class>
@@ -19,5 +20,14 @@
 	<servlet-mapping>
 		<servlet-name>hello</servlet-name>
 		<url-pattern>/hello.do</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>ex01</servlet-name>
+		<servlet-class>com.test.java.Ex01</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ex01</servlet-name>
+		<url-pattern>/ex01.do</url-pattern>
 	</servlet-mapping>
 </web-app>
